[project]
name = "wcx-suite"
version = "0.1.0"
description = "Custom VRAM/stress bench for local CUDA inference on NVIDIA GPUs — finds safe context ceilings without exhausting the card."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Will Sarg" }]
requires-python = ">=3.12"
# Barebones reads VRAM via nvidia-smi (always present with the driver) — zero runtime
# deps. CUDA/torch land during build-out, when we need real allocation control.
dependencies = []

[project.scripts]
wcx-suite = "wcx_suite.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wcx_suite"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
