[project]
name = "wcx-suite"
version = "0.1.0"
description = "Custom VRAM/stress bench for local CUDA inference on NVIDIA GPUs — finds safe context ceilings without exhausting the card."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Will Sarg" }]
requires-python = ">=3.12"
# Core reads VRAM via nvidia-smi (always present with the driver) — zero runtime deps.
dependencies = []

[project.optional-dependencies]
# Real load-and-measure on the GPU. Heavy (torch CUDA wheels) and only ever installed
# on an NVIDIA box (via `ara install --engine wcx`), so the weight lands where it's used.
# The probe worker imports these lazily — the core stays installable without them.
cuda = [
    "torch>=2.4",
    "transformers>=4.45",
]

[project.scripts]
wcx-suite = "wcx_suite.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wcx_suite"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
