[project]
name = "wcx-suite"
version = "0.1.0"
description = "Custom VRAM/stress bench for local CUDA inference on NVIDIA GPUs — finds safe context ceilings without exhausting the card."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Will Sarg" }]
requires-python = ">=3.12"
# Core reads VRAM via nvidia-smi (always present with the driver) — zero runtime deps.
dependencies = []

[project.optional-dependencies]
# Real load-and-measure on the GPU. Heavy (torch CUDA wheels) and only ever installed
# on an NVIDIA box (via `ara install --engine wcx`), so the weight lands where it's used.
# The probe worker imports these lazily — the core stays installable without them.
# nvidia-ml-py provides the `pynvml` NVML binding for native VRAM reads (system.py); when it's
# absent the core falls back to parsing nvidia-smi, so it stays an accelerator, not a hard dep.
cuda = [
    "torch>=2.4",
    "transformers>=4.45",
    "nvidia-ml-py>=12",
    "hqq>=0.2",          # KV-cache quantization backend (transformers cache_implementation="quantized")
    "bitsandbytes>=0.43",  # weight quantization (int8 LLM.int8 / int4 NF4) — works on Turing sm_75+
    "accelerate>=0.30",    # device_map placement required by quantized (bnb/FP8/pre-quantized) loads
]

[project.scripts]
wcx-suite = "wcx_suite.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wcx_suite"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
